--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
       "@babel/preset-env"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties",
+      [
+        "@babel/plugin-proposal-class-properties",
+        {},
+        "class-properties"
+      ],
       "@babel/plugin-transform-runtime"
     ]
   },
