--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "autoprefixer": "^9.7.6",
+    "caniuse-lite": "^1.0.30001244",
     "find-parent-dir": "^0.3.0",
     "glob": "^7.1.6",
     "minimist": "^1.2.5",
