--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "parcel-plugin-watch-reload": "^1.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.26.5"
+  },
+  "dependencies": {
+    "alpinejs": "^3.10.2"
   }
 }
