--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "autoprefixer": "^9.7.6",
-    "find-parent-dir": "^0.3.0",
+    "find-parent-dir": "^0.3.1",
     "glob": "^7.1.6",
     "minimist": "^1.2.5",
     "parcel-bundler": "^1.12.4",
@@ -51,6 +51,10 @@
     "sass": "^1.26.5"
   },
   "dependencies": {
-    "alpinejs": "^3.10.2"
+    "@codemirror/lang-html": "^6.4.1",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/state": "^6.2.0",
+    "alpinejs": "^3.10.2",
+    "codemirror": "^6.0.1"
   }
 }
