--- a/package.json
+++ b/package.json
@@ -4,51 +4,43 @@
   "private": true,
   "description": "Build process for frontend assets",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "preinstall": "git config core.hooksPath .githooks",
-    "bundle": "node parcel-bundler.js -f \"assets-src/*.js\" -o \"assets\"",
-    "watch": "npm run bundle",
-    "build": "npm run bundle -- --production"
+    "watch": "webpack --watch --mode=development --progress --stats minimal",
+    "build": "webpack --mode=production  --progress --stats minimal",
+    "lint": "npx prettier --write ./assets-src/"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ],
-    "plugins": [
-      [
-        "@babel/plugin-proposal-class-properties",
-        {},
-        "class-properties"
-      ],
-      "@babel/plugin-transform-runtime"
-    ]
-  },
-  "watchreload": {
-    "files": "**/*.php"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": true
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "not dead"
-  ],
   "author": "Rasso Hilber",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "autoprefixer": "^9.7.6",
-    "find-parent-dir": "^0.3.1",
-    "glob": "^7.1.6",
+    "autoprefixer": "^10.4.2",
+    "browser-sync": "^2.27.7",
+    "browserslist": "^4.21.4",
+    "chokidar": "^3.5.3",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.6.0",
+    "dotenv": "^16.0.3",
+    "esbuild-loader": "^2.18.0",
+    "esbuild-plugin-browserslist": "^0.6.0",
+    "findup-sync": "^5.0.0",
+    "lodash-es": "^4.17.21",
+    "mini-css-extract-plugin": "^2.5.3",
     "minimist": "^1.2.5",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-watch-reload": "^1.0.0",
-    "rimraf": "^3.0.2",
-    "sass": "^1.26.5"
+    "postcss": "^8.4.6",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.8.3",
+    "prettier": "2.7.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.6.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.9.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-livereload-plugin": "^3.0.2",
+    "webpack-remove-empty-scripts": "^0.7.3"
   },
   "dependencies": {
     "@alpinejs/mask": "^3.11.1",
