--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
   "type": "wordpress-plugin",
   "require": {
     "php": ">=8.0"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.9"
   }
 }
