Switch to pnpm, optimize watch and build processes

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "preinstall": "git config core.hooksPath .githooks",
-    "watch": "webpack --watch --mode=development --progress --stats minimal",
-    "build": "webpack --mode=production  --progress --stats minimal",
+    "preinstall": "npx only-allow pnpm && git config core.hooksPath .githooks",
+    "watch": "rm -f .is-built && webpack --watch --mode=development --progress --stats minimal",
+    "build": "[ -f .is-built ] && exit 0; webpack --mode=production --progress --stats minimal && touch .is-built",
     "lint:assets": "npx prettier --write ./assets-src/",
     "lint:php": "./lib/vendor/bin/phpcs",
     "format:php": "./lib/vendor/bin/phpcbf"
@@ -16,40 +16,40 @@
   "author": "Rasso Hilber",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "browser-sync": "^2.27.7",
-    "browserslist": "^4.21.4",
-    "chokidar": "^3.5.3",
-    "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.6.0",
-    "dotenv": "^16.0.3",
-    "esbuild-loader": "^2.18.0",
-    "esbuild-plugin-browserslist": "^0.6.0",
+    "autoprefixer": "^10.4.19",
+    "browser-sync": "^3.0.2",
+    "browserslist": "^4.23.2",
+    "chokidar": "^3.6.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
+    "esbuild-loader": "^4.2.2",
+    "esbuild-plugin-browserslist": "^0.14.0",
     "findup-sync": "^5.0.0",
     "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "^2.5.3",
-    "minimist": "^1.2.5",
-    "postcss": "^8.4.6",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.8.3",
-    "prettier": "2.7.1",
-    "sass": "^1.49.7",
-    "sass-loader": "^12.6.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.9.4",
+    "mini-css-extract-plugin": "^2.9.0",
+    "minimist": "^1.2.8",
+    "postcss": "^8.4.40",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.6.0",
+    "prettier": "3.3.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-bundle-analyzer": "^4.7.0",
-    "webpack-cli": "^4.9.2",
+    "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
     "webpack-livereload-plugin": "^3.0.2",
-    "webpack-remove-empty-scripts": "^0.7.3"
+    "webpack-remove-empty-scripts": "^1.0.4"
   },
   "dependencies": {
-    "@alpinejs/mask": "^3.13.10",
-    "@codemirror/lang-html": "^6.4.1",
+    "@alpinejs/mask": "^3.14.1",
+    "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/state": "^6.2.0",
-    "alpinejs": "^3.13.10",
+    "@codemirror/state": "^6.4.1",
+    "alpinejs": "^3.14.1",
     "codemirror": "^6.0.1",
     "feather-icons": "^4.29.2"
   }
