--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   },
   "type": "wordpress-plugin",
+  "minimum-stability": "dev",
   "require": {
     "php": ">=8.2",
     "symfony/var-dumper": "^7.1"
