Add a description for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "hirasso/rh-admin-utils",
+  "description": "A WordPress utility plugin 🥞",
   "config": {
     "vendor-dir": "./lib/vendor"
   },
