--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "build-frontend-assets",
-  "version": "1.0.0",
+  "name": "rh-admin-utils",
+  "version": "2.3.4",
   "private": true,
   "description": "Build process for frontend assets",
   "main": "index.js",
@@ -19,6 +19,7 @@
   "author": "Rasso Hilber",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.27.9",
     "autoprefixer": "^10.4.19",
     "browser-sync": "^3.0.2",
     "browserslist": "^4.23.2",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "@alpinejs/mask": "^3.14.1",
+    "@changesets/changelog-github": "^0.5.0",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/state": "^6.4.1",
