--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.3/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "hirasso/rh-admin-utils" }],
-  "commit": ["../scripts/commit.js", { "customOption": true }],
+  "changelog": "@changesets/cli/changelog",
+  "commit": false,
   "fixed": [],
   "linked": [],
   "access": "restricted",
