--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "rm -f .is-built && webpack --watch --mode=development --progress --stats minimal",
     "build": "[ -f .is-built ] && exit 0; webpack --mode=production --progress --stats minimal && touch .is-built",
     "format:assets": "npx prettier --write ./assets-src/",
-    "version:changeset": "pnpm changeset version && pnpm version:patch",
+    "version:prepare": "pnpm changeset version && pnpm version:patch",
     "version:patch": "node scripts/patchVersionInPluginFile.js",
     "lint:php": "./lib/vendor/bin/phpcs",
     "format:php": "./lib/vendor/bin/phpcbf",
