--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "description": "Build process for frontend assets",
   "main": "index.js",
   "type": "module",
+  "packageManager": "pnpm@9.15.0",
   "scripts": {
     "preinstall": "npx only-allow pnpm && git config core.hooksPath .githooks",
     "watch": "rm -f .is-built && webpack --watch --mode=development --progress --stats minimal",
     "build": "[ -f .is-built ] && exit 0; webpack --mode=production --progress --stats minimal && touch .is-built",
     "format:assets": "npx prettier --write ./assets-src/",
-    "version:prepare": "pnpm changeset version && pnpm version:patch",
-    "version:patch": "node scripts/patchVersionInPluginFile.js",
     "lint:php": "./lib/vendor/bin/phpcs",
     "format:php": "./lib/vendor/bin/phpcbf",
-    "format": "npm run format:assets && npm run format:php"
+    "format": "npm run format:assets && npm run format:php",
+    "version:update": "pnpm changeset version && pnpm run version:patch",
+    "version:patch": "node scripts/patchVersion.js",
+    "publish": "pnpm changeset publish"
   },
   "author": "Rasso Hilber",
   "license": "ISC",
