--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -5,13 +5,21 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # for Git to git push
+  pull-requests: write # to allow creating PR
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
-    name: Create Version PR or Publish
+    # Don't run on forks. We can and should only release from the main repo.
     if: github.repository == 'hirasso/rh-admin-utils'
+
+    name: Create Version PR or Publish
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
