Try `publish: pnpm changeset tag` directly in action

--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -49,6 +49,6 @@ jobs:
           title: '[CI] Release'
           commit: '[CI] Release'
           version: pnpm run version
-          publish: pnpm run publish
+          publish: pnpm changeset tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
