--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "npm run format:assets && npm run format:php",
     "version": "pnpm changeset version && pnpm run version:patch",
     "version:patch": "node scripts/patchVersion.js",
-    "publish": "pnpm changeset publish && pnpm changeset tag"
+    "publish": "pnpm changeset tag && git push --follow-tags"
   },
   "author": "Rasso Hilber",
   "license": "ISC",
