--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "prefer-stable": true,
   "require": {
     "php": ">=8.2",
+    "composer/installers": "^1.0 || ^2.0",
     "symfony/var-dumper": "^7.1"
   },
   "scripts": {
