--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,5 @@ scripts export-ignore
 .gitattributes export-ignore
 bin export-ignore
 .github export-ignore
+composer.lock export-ignore
+*.sh export-ignore
