--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  contents: write  # for Git to git push
-  pull-requests: write # to allow creating PR
+  contents: write  # for merging the PR and creating the release
+  pull-requests: write # for creating the version PR
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -42,8 +42,8 @@ jobs:
 
       # Run changesets action either if there are unreleased changesets (= a PR must be created)
       # or if the commit message matches the release PR (= new versions must be published to NPM)
-      - name: Create changesets PR or publish to NPM
-        id: changesets
+      - name: Create changesets PR or Publish
+        id: ci
         uses: changesets/action@v1
         with:
           title: '[CI] Release'
