--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -43,7 +43,7 @@ jobs:
       # Run changesets action either if there are unreleased changesets (= a PR must be created)
       # or if the commit message matches the release PR (= new versions must be published to NPM)
       - name: Create changesets PR or Publish
-        id: ci
+        id: cs
         uses: changesets/action@v1
         with:
           title: '[CI] Release'
@@ -52,3 +52,43 @@ jobs:
           publish: pnpm run publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Checkout dist repo
+        uses: actions/checkout@v3
+        # GitHub Actions outputs are strings and the string 'false' converts to
+        # `true` because it isn't the empty string.
+        if: steps.cs.outputs.published == 'true'
+        with:
+          repository: hirasso/rh-admin-utils-dist
+          ref: empty
+          path: dist
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push bundles to dist repo
+        # GitHub Actions outputs are strings and the string 'false' converts to
+        # `true` because it isn't the empty string.
+        if: steps.cs.outputs.published == 'true'
+        # working-directory: dist
+        run: |
+          # Extract the version of `lit` that was published or the empty string.
+          echo "Checking if Package was published..."
+          PACKAGE_VERSION=$(node ./scripts/logVersion.js)
+          # Don't create a bundle commit if `lit` wasn't published.
+          if [[ -z "$PACKAGE_VERSION" ]]; then
+            echo "Package wasn't published, so bundles will not be pushed."
+            exit 0
+          fi
+          echo "Package was published (${PACKAGE_VERSION}), so bundles will be pushed."
+          echo "Checking out the empty root commit..."
+          cd dist/
+          git checkout --detach empty
+          echo "Copying in all of the bundles..."
+          cd ..
+          cp -Rf assets src rh-admin-utils.php vendor-prefixed CHANGELOG.md README.md vendor-prefixed dist/
+          cd dist/
+          echo "Committing and pushing new bundles with tag 'v${PACKAGE_VERSION}'..."
+          git add .
+          git commit -m "Bundles for rh-admin-utils@${PACKAGE_VERSION}"
+          git tag "v${PACKAGE_VERSION}"
+          git push origin "v${PACKAGE_VERSION}"
+          echo "Done."
