--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -67,6 +67,7 @@ jobs:
           repository: hirasso/rh-admin-utils-dist
           ref: empty
           path: dist
+          # secrets.GITHUB_TOKEN would not be enough to push to the dist repo
           token: ${{ secrets.HIRASSO_ACTIONS_TOKEN }}
 
       - name: Push bundles to dist repo
