--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
   "require": {
     "php": ">=8.2",
     "composer/installers": "^1.0 || ^2.0",
-    "symfony/var-dumper": "^7.1",
-    "yahnis-elsts/plugin-update-checker": "^5.5"
+    "symfony/var-dumper": "^7.1"
   },
   "scripts": {
       "prefix-namespaces": [
