--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": ">=8.2",
     "composer/installers": "^1.0 || ^2.0",
     "symfony/var-dumper": "^7.1",
-    "yahnis-elsts/plugin-update-checker": "^5.5"
+    "yahnis-elsts/plugin-update-checker": "^5.5",
+    "snicco/better-wp-cli": "^1.10"
   },
   "scripts": {
       "prefix-namespaces": [
