--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "watch": "rm -f .is-built && webpack --watch --mode=development --progress --stats minimal",
     "build": "[ -f .is-built ] && exit 0; webpack --mode=production --progress --stats minimal && touch .is-built",
     "format:assets": "npx prettier --write ./assets-src/",
-    "lint:php": "./lib/vendor/bin/phpcs",
-    "format:php": "./lib/vendor/bin/phpcbf",
+    "lint:php": "./lib/vendor-prefixed/bin/phpcs",
+    "format:php": "./lib/vendor-prefixed/bin/phpcbf",
     "format": "npm run format:assets && npm run format:php",
     "version": "pnpm changeset version && pnpm run version:patch",
     "version:patch": "node scripts/patchVersion.js",
