--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -20,6 +20,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    # Prevent publihsing from going through if something fails
     strategy:
       fail-fast: true
 
