--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -87,3 +87,20 @@ jobs:
         if: steps.cs.outputs.published == 'true'
         run: |
           ./scripts/pushReleaseToDist.sh
+
+      - name: Gets latest created release info
+        id: release-info
+        if: steps.cs.outputs.published == 'true'
+        uses: jossef/action-latest-release-info@v1.2.1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Upload release asset to GitHub release page
+        id: upload-release-asset
+        if: steps.cs.outputs.published == 'true'
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.release-info.outputs.upload_url }}
+          asset_path: ./release.zip
+          asset_name: rh-admin-utils.zip
+          asset_content_type: application/zip
