--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -80,29 +80,42 @@ jobs:
           commit: '[CI] Release'
           version: pnpm run version
           publish: pnpm run publish
+          createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.HIRASSO_ACTIONS_TOKEN }}
+
+      - name: Extract latest release body
+        if: steps.cs.outputs.published == 'true'
+        run: node ./scripts/extractLatestReleaseBody.js
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: steps.cs.outputs.published == 'true'
+        with:
+          body_path: RELEASE.md
+          files: |
+            rh-admin-utils.zip
 
       # - name: Push release to dist repo
       #   if: steps.cs.outputs.published == 'true'
       #   run: |
       #     ./scripts/pushReleaseToDist.sh
 
-      - name: Gets latest created release info
-        id: release-info
-        if: steps.cs.outputs.published == 'true'
-        uses: jossef/action-latest-release-info@v1.2.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Gets latest created release info
+      #   id: release-info
+      #   if: steps.cs.outputs.published == 'true'
+      #   uses: jossef/action-latest-release-info@v1.2.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        if: steps.cs.outputs.published == 'true'
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.release-info.outputs.upload_url }}
-          asset_path: ./rh-admin-utils.zip
-          asset_name: rh-admin-utils.zip
-          asset_content_type: application/zip
+      # - name: Upload Release Asset
+      #   id: upload-release-asset
+      #   if: steps.cs.outputs.published == 'true'
+      #   uses: actions/upload-release-asset@v1.0.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.release-info.outputs.upload_url }}
+      #     asset_path: ./rh-admin-utils.zip
+      #     asset_name: rh-admin-utils.zip
+      #     asset_content_type: application/zip
