--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: write  # for merging the PR and creating the release
+  contents: write # for merging the PR and creating the release
   pull-requests: write # for creating the version PR
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
@@ -36,7 +36,7 @@ jobs:
       - name: Set up PHP and Composer
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: "8.2"
           tools: composer
 
       # Setup PNPM before node.js, so that we use the cache in the next action
@@ -76,8 +76,8 @@ jobs:
         id: cs
         uses: changesets/action@v1
         with:
-          title: '[CI] Release'
-          commit: '[CI] Release'
+          title: "[CI] Release"
+          commit: "[CI] Release"
           version: pnpm run version
           publish: pnpm run publish
         env:
@@ -87,10 +87,15 @@ jobs:
         if: steps.cs.outputs.published == 'true'
         run: node ./scripts/extractLatestReleaseBody.js
 
-      - name: Add artifacts to the release
+      - name: "Get Latest Tag"
+        id: latest-tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
+      - name: Add artifacts to the latest release
         uses: ncipollo/release-action@v1
         if: steps.cs.outputs.published == 'true'
         with:
+          tag: ${{ steps.latest-tag.outputs.tag }}
           allowUpdates: true
           artifacts: "rh-admin-utils.zip"
 
