Preserve the release body when uploading artifacts

--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -94,6 +94,9 @@ jobs:
         with:
           tag: ${{ steps.latest-tag.outputs.tag }}
           allowUpdates: true
+          omitBodyDuringUpdate: true
+          omitNameDuringUpdate: true
+          omitPrereleaseDuringUpdate: true
           artifacts: "rh-admin-utils.zip"
 
       - name: Push release to dist repo
