Clean-up binaries

--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -69,8 +69,8 @@ jobs:
       # Run this before changesets, to make sure releases actually work
       - name: Create scoped release asset
         run: |
-          ./scripts/createScopedReleaseAsset.sh
-          ./scripts/prepareDistFolder.sh
+          bin/js/generateReleaseFiles
+          bin/sh/prepareDistFolder
 
       # Run changesets action either if there are unreleased changesets (= a PR must be created)
       # or if the commit message matches the release PR (= new versions must be published to NPM)
@@ -104,4 +104,4 @@ jobs:
       - name: Push release to dist repo
         if: steps.cs.outputs.published == 'true'
         run: |
-          ./scripts/pushReleaseToDist.sh
+          bin/sh/pushReleaseToDist
