--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "minimist": "^1.2.8",
+    "picocolors": "^1.1.1",
     "postcss": "^8.4.40",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.6.0",
