--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format:php": "./vendor/bin/phpcbf",
     "format": "npm run format:assets && npm run format:php",
     "version": "pnpm changeset version && pnpm run version:patch",
-    "version:patch": "bin/js/patchVersion"
+    "version:patch": "bin/js/patchVersion.js"
   },
   "author": "Rasso Hilber",
   "license": "ISC",
