--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.5",
     "esbuild-loader": "^4.2.2",
     "esbuild-plugin-browserslist": "^0.14.0",
+    "fast-glob": "^3.3.2",
     "findup-sync": "^5.0.0",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
