--- a/package.json
+++ b/package.json
@@ -6,20 +6,18 @@
   "main": "index.js",
   "type": "module",
   "packageManager": "pnpm@9.15.0",
+  "author": "Rasso Hilber",
+  "license": "ISC",
   "scripts": {
     "prepare": "git config core.hooksPath .githooks",
     "preinstall": "npx only-allow pnpm",
-    "watch": "rm -f .is-built && webpack --watch --mode=development --progress --stats minimal",
-    "build": "[ -f .is-built ] && exit 0; webpack --mode=production --progress --stats minimal && touch .is-built",
-    "format:assets": "npx prettier --write ./assets-src/",
-    "lint:php": "./vendor/bin/phpcs",
-    "format:php": "./vendor/bin/phpcbf",
-    "format": "npm run format:assets && npm run format:php",
+    "watch": "rm -f .is-built && webpack --config config/webpack.config.js --watch --mode=development --progress --stats minimal",
+    "build": "[ -f .is-built ] && exit 0; webpack --config config/webpack.config.js --mode=production --progress --stats minimal && touch .is-built",
+    "format:assets": "pnpm exec prettier --write ./assets-src/ ./bin/js/",
+    "format": "pnpm run format:assets && composer format",
     "version": "pnpm changeset version && pnpm run version:patch",
     "version:patch": "bin/js/patchVersion.js"
   },
-  "author": "Rasso Hilber",
-  "license": "ISC",
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
     "autoprefixer": "^10.4.19",
