--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -12,13 +12,26 @@ permissions:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  release:
-    # Don't run on forks. We can and should only release from the main repo.
-    if: github.repository == 'hirasso/rh-admin-utils'
-
-    name: Create Version PR or Publish
-
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      package-name: ${{ steps.extract-name.outputs.package_name }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Extract repository name from composer.json
+        id: extract-name
+        run: |
+          NAME=$(jq -r '.name' composer.json)
+          echo "::set-output name=package_name::${NAME}"
+
+  release:
+    name: Create Version PR or Publish
+    runs-on: ubuntu-latest
+
+    needs: setup
+    if: ${{ github.repository == needs.setup.outputs.package-name }}
 
     # Prevent publihsing from going through if something fails
     strategy:
