--- a/.github/workflows/dynamic-repo-name.yml
+++ b/.github/workflows/dynamic-repo-name.yml
@@ -9,15 +9,19 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     outputs:
-      package-name: ${{ steps.extract-name.outputs.package_name }}
+      package-name: ${{ steps.package-infos.outputs.name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Extract repository name from composer.json
-        id: extract-name
+      - name: Get package infos
+        id: package-infos
         run: |
-          echo "package_name=$(jq -r '.name' composer.json)" >> $GITHUB_OUTPUT
+          echo "name=$(jq -r '.name' composer.json)" >> $GITHUB_OUTPUT
+
+      - name: Debug package infos
+        run: |
+          echo "name: ${{ steps.package-infos.outputs.name }}"
 
   release:
     name: Create Version PR or Publish
