--- a/.github/workflows/dynamic-repo-name.yml
+++ b/.github/workflows/dynamic-repo-name.yml
@@ -6,30 +6,41 @@ on:
   push:
 
 jobs:
-  setup:
+  package-infos:
+    name: Get Package Infos
     runs-on: ubuntu-latest
     outputs:
-      package-name: ${{ steps.package-infos.outputs.name }}
+      fullName: ${{ steps.package-infos.outputs.fullName }}
+      owner: ${{ steps.package-infos.outputs.owner }}
+      name: ${{ steps.package-infos.outputs.name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Get package infos
+      - name: Read and Write Package Infos to Output
         id: package-infos
         run: |
-          echo "name=$(jq -r '.name' composer.json)" >> $GITHUB_OUTPUT
+          NAME=$(jq -r '.name' composer.json)
+          echo "fullName=${NAME}" >> $GITHUB_OUTPUT
+          echo "owner=${NAME%%/*}" >> $GITHUB_OUTPUT
+          echo "name=${NAME#*/}" >> $GITHUB_OUTPUT
 
       - name: Debug package infos
         run: |
+          echo "fullName: ${{ steps.package-infos.outputs.fullName }}"
+          echo "owner: ${{ steps.package-infos.outputs.owner }}"
           echo "name: ${{ steps.package-infos.outputs.name }}"
 
   release:
     name: Create Version PR or Publish
     runs-on: ubuntu-latest
 
-    needs: setup
-    if: ${{ github.repository == needs.setup.outputs.package-name }}
+    needs: package-infos
+    if: ${{ github.repository == needs.package-infos.outputs.fullName }}
 
     steps:
       - name: Dump `package-name`
-        run: echo ${{ needs.setup.outputs.package-name }}
+        run: |
+          echo "fullName: ${{ needs.package-infos.outputs.fullName }}"
+          echo "owner: ${{ needs.package-infos.outputs.owner }}"
+          echo "name: ${{ needs.package-infos.outputs.name }}"
